add node adaptor

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
 		"vite": "^4.2.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-node": "^1.2.3"
+	}
 }
